--- a/documentos/Practicas de aula/Practica2/P2.ipynb
+++ b/documentos/Practicas de aula/Practica2/P2.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ed024f5d",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
    "source": [
     "from Bio.Seq import Seq\n",
     "\n",
-    "seq = Seq(\"ATGCCGTTAGCT\")d \n",
+    "seq = Seq(\"ATGCCGTTAGCT\")\n",
     "complement = seq.complement()\n",
     "print(\"Secuencia (5'->3'):\", seq)\n",
     "print(\"Complementaria (5'->3'):\", complement)"
